# netflow2json

./: LICENSE  README.md  analyser.py  config.ini  setup.cfg  tools.py  traffic.py  web.py
Example/: example.py
src/netflow2json/: __init__.py  analyser.py  tools.py  web.py
