[metadata]
name = netflow2json
version = 0.0.2
author = Hesam Haghpanah
author_email = h.haghpanah@outlook.com
description = This is a Python-based solution for collecting and analyzing Netflow V9 traffic data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/h-haghpanah/Netflow_V9_Traffic_Analysis.git
project_urls =
    Bug Tracker = https://github.com/h-haghpanah/Netflow_V9_Traffic_Analysis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    flask>=3.0.0
    netaddr>=0.8.0
    netflow>=0.12.2

[options.packages.find]
where = src
